# MDPad

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  findings.md  index.html  package.json  pnpm-lock.yaml  progress.md  tailwind.config.cjs  task_plan.md  tsconfig.json  vite.config.ts  vitest.e2e.config.ts
.inspect_tsk/: pkg.tgz
docs/: Claude_Design智能设计助手系统提示词技术解析报告.html  Cursor Goes To War For AI Coding Dominance.md  MDPad 的 slide 支持最小实现方案（MVP）.md  Notion-ish-style.md  SKILL.md  build.md  classic-ui-design-guide.md  classictheme.md  markdown-theme-sources.md  mdpad-devlog-v0.1.8.md  newUI.txt  newfeaturediscussion.md  release-notes-v0.1.11.md  release-notes-v0.2.10.md  release-notes-v0.2.5.md  release-notes-v0.2.7.md  release-notes-v0.2.8.md  release-notes-v0.2.9.md  tauri-frameless-custom-titlebar-best-practices.md  无title栏设计.txt  轻文_MDPad.md
e2e/: markdown-flow.e2e.test.ts
scripts/: prepare-cli-resource.mjs  prepare-marknative-renderer.mjs  version-manager.mjs
src/: App.test.ts  App.tsx  main.tsx  styles.css  version-manager.test.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/samples/: MDPad-Sample.en-US.md  MDPad-Sample.zh-CN.md
src-tauri/src/: export_service.rs  lib.rs  main.rs
src-tauri/windows/: add-user-path.ps1  nsis-hooks.nsh  remove-user-path.ps1
tasks/: lessons.md  task_tmp.md  todo.md
update/: updatenote_2026041922.md  updatenote_2026042008.md  updatenote_2026042015.md  updatenote_2026042017.md  (+18 more)
(+151 files in other folders)
