[package]
name = "mdpad"
version = "0.2.6"
description = "A lightweight single-file Markdown editor for Windows."
authors = ["MDPad Contributors"]
edition = "2021"
default-run = "mdpad"

[lib]
name = "mdpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mdpad"
path = "src/main.rs"

[[bin]]
name = "mdpad-cli"
path = "src/bin/mdpad-cli.rs"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
rfd = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2.0.2"
